# autopoiesis

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  README.md  WORKFLOW.md  approval_crypto.py  approval_keys.py  approval_policy.py  approval_security.py  approval_store.py  approval_store_schema.py  approval_store_verify.py  approval_types.py  chat.py  chat_approval.py  chat_cli.py  chat_runtime.py  chat_worker.py  context_manager.py  docker-compose.yml  exec_registry.py  exec_tool.py  history_store.py  memory_store.py  memory_tools.py  model_resolution.py  models.py  otel_tracing.py  process_tool.py  prompts.py  pty_spawn.py  pyproject.toml  rich_display.py  run_simple.py  skillmaker_tools.py  (+11 more)
.github/: pull_request_template.md
.github/workflows/: benchmarks.yml  ci.yml  narrative.yml
agent/: __init__.py  batch.py  cli.py  history.py  runtime.py  worker.py
approval/: __init__.py  chat_approval.py  crypto.py  key_files.py  keys.py  policy.py  store.py  store_schema.py  store_verify.py  types.py
benchmarks/: README.md  conftest.py  pyproject.toml  run.sh  tasks.json
benchmarks/harness/: run.sh  tasks.json
benchmarks/scorers/: __init__.py  custom.py
benchmarks/src/autopoiesis_terminal_bench/: __init__.py  agent.py  install-autopoiesis.sh.j2
benchmarks/tasks/: __init__.py  knowledge.py  tool_use.py
benchmarks/tests/: e2e_tasks.py  test_agent.py  test_e2e.py
display/: __init__.py  rich_display.py  stream_formatting.py  streaming.py
docker/: docker-compose.signoz.yml
docs/: observability.md  testing.md
docs/research/: README.md  agent-benchmarking-strategy.md  ai-interface-ux-study.md  devops-ci-review.md  file-based-knowledge-management.md  memory-system-design.md  openclaw-agency-study.md  (+3 more)
evals/: README.md  pyproject.toml
evals/scorers/: __init__.py  basic_scorer.py
evals/solvers/: __init__.py  autopoiesis_solver.py
evals/tasks/: __init__.py  core_capabilities.py
frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts  wrangler.toml
infra/: __init__.py  exec_registry.py  otel_tracing.py  pty_spawn.py  subscription_processor.py  topic_processor.py  work_queue.py
scripts/: arch_check.py  module-index.sh  pr_narrative.py  rtm_check.py
server/: __init__.py  app.py  auth.py  connections.py  routes.py  sessions.py  stream_handle.py
specs/: OVERVIEW.md  _template.md  architecture.yaml  security.md
store/: __init__.py  history.py  knowledge.py  knowledge_migration.py  memory.py  subscriptions.py
tests/: conftest.py  test_agent_aware_toolset.py  test_agent_build.py  test_agent_config.py  test_agent_identity_propagation.py  test_agent_registry.py  test_agent_spawn_validation.py  test_agent_workspace.py  test_api_routes.py  test_approval_e2e.py  test_approval_security.py  test_auth_middleware.py  test_batch.py  test_chat_approval.py  test_chat_approval_serialize.py  test_chat_checkpoint_recovery.py  test_chat_entrypoint.py  test_chat_runtime.py  test_concurrent_display.py  test_context_manager.py  test_conversation_log.py  test_db_default_paths.py  test_exec.py  test_exec_tier_enforcement.py  test_fallback_model.py  test_fts5_adversarial.py  test_github_skill.py  test_history_store.py  test_knowledge.py  test_loop_guards.py  test_mcp_server.py  test_memory_store.py  test_memory_tools.py  test_model_settings.py  test_otel_instrumentation.py  test_path_traversal.py  test_path_validation_transform.py  test_path_validator.py  test_process_tool.py  test_pty_execution.py  (+23 more)
tools/: _PATTERN.md  __init__.py  exec_tool.py  knowledge_tools.py  memory_tools.py  process_tool.py  subscription_tools.py  toolset_wrappers.py  topic_tools.py
topics/: code-review.md  research.md  writing.md
(+174 files in other folders)
