[project]
name = "autopoiesis"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pydantic-ai-slim[openai,anthropic,cli,dbos,mcp]>=1.59,<2",
  "pydantic-ai-backend==0.1.6",
  "python-dotenv>=1.2,<2",
]

[dependency-groups]
dev = [
  "ruff>=0.9",
  "pyright>=1.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "SIM",  # flake8-simplify
  "RUF",  # ruff-specific
  "PLR",  # pylint refactor (includes function length)
  "C901", # complexity
]
ignore = []

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pyright]
include = ["."]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportMissingTypeStubs = false
