[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autopoiesis-evals"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "inspect-ai>=0.3",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tasks*", "solvers*", "scorers*"]
